--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -29,8 +29,10 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           mamba-version: "*"
-          channels: defaults,conda-forge,plotly
+          channels: conda-forge,plotly
+          channel-priority: strict
           auto-activate-base: false
+          auto-update-conda: false
           activate-environment: package_name
           environment-file: requirements_conda.yml
 
